--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ homepage = "https://github.com/smsweet66/thermometer"
 repository = "https://github.com/smsweet66/thermometer"
 
 [dependencies]
-rocket = { version = "0.5.0", features = ["json"] }
-serde = "1.0.0"
+daemonize = "0.5"
+rocket = { version = "0.5", features = ["json"] }
+serde = "1.0"
